objects/Bank_Branch__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Bank_ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <label>Bank Branch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Branchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>